--- a/templates/watch_list.html
+++ b/templates/watch_list.html
@@ -64,6 +64,19 @@ tr:nth-child(even) {
    {%endif%}	  
   {% endfor %}
   </table>
+  <h1>RSI Overbought Stocks</h1>
+  <table>
+  <tr>
+    <th>Symbol</th>
+    <th>RSI</th>
+
+  </tr>
+  {%for name,signal,rsi,slowk,slowd in rsi_only%}
+	  <tr>
+		<td>{{name}}</td>
+		<td>{{rsi}}</td>
+	  </tr>	  
+  {% endfor %}
   	<form action="/">
 		<input style = "font-size:15px" type="submit" value="Return to Homepage">
 	</form>
