moved return button on watchlist

--- a/templates/watch_list.html
+++ b/templates/watch_list.html
@@ -77,6 +77,7 @@ tr:nth-child(even) {
 		<td>{{rsi}}</td>
 	  </tr>	  
   {% endfor %}
+  </table>
   	<form action="/">
 		<input style = "font-size:15px" type="submit" value="Return to Homepage">
 	</form>
