added RSI oversold to watchlist/refactor and comment

--- a/templates/watch_list.html
+++ b/templates/watch_list.html
@@ -71,13 +71,28 @@ tr:nth-child(even) {
     <th>RSI</th>
 
   </tr>
-  {%for name,signal,rsi,slowk,slowd in rsi_only%}
+  {%for name,signal,rsi,slowk,slowd in rsi_overbought%}
 	  <tr>
 		<td>{{name}}</td>
 		<td>{{rsi}}</td>
 	  </tr>	  
   {% endfor %}
   </table>
+   <h1>RSI Oversold Stocks</h1>
+  <table>
+  <tr>
+    <th>Symbol</th>
+    <th>RSI</th>
+
+  </tr>
+  {%for name,signal,rsi,slowk,slowd in rsi_oversold%}
+	  <tr>
+		<td>{{name}}</td>
+		<td>{{rsi}}</td>
+	  </tr>	  
+  {% endfor %}
+  </table> 
+  <br>
   	<form action="/">
 		<input style = "font-size:15px" type="submit" value="Return to Homepage">
 	</form>
