--- a/templates/myform.html
+++ b/templates/myform.html
@@ -13,7 +13,7 @@
 			
 				<form style = "font-size:30px" action="readings" method="POST" id = "stock form">
 				
-					<input type="text" name="test">
+					<input type="text" name="symbol">
 					
 					<select style = "font-size:20px" name = "length" form = "stock form">
 						<option style = "font-size:20px" value = "daily">Daily</option>
