added full functionality for imp spikes on individualstocks

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -25,7 +25,10 @@
 				<input style = "font-size:30px"type="submit" value="Watchlist">
 			</form>
 			
-
+			<h1> To filter what stocks in the S&P500 have had implied volatility spikes click below. </h1>
+			<form action="/vixform">
+				<input style = "font-size:30px"type="submit" value="VIX Spikes">
+			</form>
 		</body>
 	</html>
    
