--- a/templates/vix_decider.html
+++ b/templates/vix_decider.html
@@ -36,7 +36,7 @@
 <script>
 $(function(){
     var $select = $(".1-100");
-    for (i=2;i<=10;i++){
+    for (i=2;i<={{length}};i++){
         $select.append($('<option></option>').val(i).html(i))
     }
 });</script>
