--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -15,6 +15,11 @@
 				<input style = "font-size:30px"type="submit" value="Get overview of SPY">
 			</form>
 			
+			<h1> 2017 Watchlist </h1>
+			<form action="/symbols_2017">
+				<input style = "font-size:30px" type="submit" value="2017 Watchlist">
+			</form>
+			
 			<h1>To see the watchlist of overbought and oversold stocks click below.</h1>
 			<form action="/symbol_alerts">
 				<input style = "font-size:30px"type="submit" value="Watchlist">
