--- a/templates/input.html
+++ b/templates/input.html
@@ -4,7 +4,7 @@
 	<title>(Routman APP)</title>
 	<body style =" background-color:DodgerBlue;text-align:center">
 		<div style =  "text-align:center">
-			<h4 text-align: center>Add symbol</h4>
+			<h2 text-align: center>Add symbols by entering below, to add multiple symbols seperate each symbol by a comma.</h2>
 				<form style = "font-size:30px" action="add_symbol" method="POST" id = "stock form">
 				
 					<input type="text" name="symbol">
@@ -14,7 +14,7 @@
 					
 				</form>
 				
-			<h4 text-align: center>Delete symbol</h4>
+			<h2 text-align: center>To delete symbol type it in below, to delete multiple symbols seperate each symbol by a comma</h2>
 				<form style = "font-size:30px" action="delete_symbol" method="POST" id = "stock form">
 				
 					<input type="text" name="symbol">
@@ -27,7 +27,7 @@
 				{% for n in symbol_list %}
 				<ul>
 					<li style=" font-size:20px; border: 5px solid black">
-					<form action = "delete" name = {{n}}><a>{{n}} <input type="submit" value = "Delete	" ></a></form>
+					<a>{{n}}</a>
 					</li>
 				</ul>	
         {% endfor %}
