added a blank watchlist

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -20,6 +20,11 @@
 				<input style = "font-size:30px" type="submit" value="2017 Watchlist">
 			</form>
 			
+			<h1> Blank Watchlist </h1>
+			<form action="/symbols_blank">
+				<input style = "font-size:30px" type="submit" value="Blank Watchlist">
+			</form>
+			
 			<h1>To see the watchlist of overbought and oversold stocks click below.</h1>
 			<form action="/symbol_alerts">
 				<input style = "font-size:30px"type="submit" value="Watchlist">
