started adding sql_watchlist

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,21 +35,19 @@ body {
 </style>
 <div>
 
-	{%if alert%}
-	   <h2 class = "flash">
+	   <h2>
 	Alert
 	</h2>
 
 		<ul>
 		
 			
-				<ul class = "flash">
+				<ul class =>
 					<li  style=" font-size:20px; border: 10px solid black">
 					The RSI is at {{alert[0]}} and the the Stochastics are at {{alert[1]}}
 					</li>
 				</ul>	
 			
-		{%endif%}
 		</ul>
 </div>
 
