ability to pick watchlist added

--- a/templates/watchlist_landing_page.html
+++ b/templates/watchlist_landing_page.html
@@ -11,7 +11,7 @@
 					
 					<p style = "font-size:25px">Pick a watchlist.</p>
 					
-						<select class="watchlist" form = "imp form" name = "days">
+						<select class="watchlist" form = "imp form" name = "watchlist_name">
 						{% for watchlist in database%}
 						<option>{{watchlist}}</option>
 						{% endfor %}
