added sort to mock_rapp, added watchlist name to symbols_from_watchlist

--- a/templates/symbols_from_watchlist.html
+++ b/templates/symbols_from_watchlist.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 <html lang="en">
-	<title>(Routman APP)</title>
+	<title>Routman APP</title>
+	<H1>{{watchlist_name}}</H1>
 	<body style =" background-color:DodgerBlue;text-align:center">
 		<div style =  "text-align:center">
 			<h2 text-align: center>Add symbols by entering below, to add multiple symbols seperate each symbol by a comma.</h2>
