--- a/templates/symbols_from_watchlist.html
+++ b/templates/symbols_from_watchlist.html
@@ -25,7 +25,7 @@
 					
 				</form>
 				
-				<h2>Do you want to recieve emails for this watchlist?</h2>
+				<h2>If you want to receive email alerts for this watchlist select the checkbox and send</h2>
 				<form style="font-size:25px" action="/to_send_or_not" method="POST" >
 				<input style="height:15px;width:15px" type="checkbox" name="abc" {{checked}}>
 				<input  style="font-size:15px" type="submit" value="Send">
@@ -40,8 +40,12 @@
         {% endfor %}
 			<br>
 			<br>
+		<form action="/watchlist_landing_page">
+			<input style = "font-size:15px" type="submit" value="Return to watchlist landing page ">
+		</form>
+		<br>
 		<form action="/">
-			<input style = "font-size:15px" type="submit" value="Return to Homepage">
+			<input style = "font-size:15px" type="submit" value="Return to home page ">
 		</form>
 	</body>
 </html>
