fixed home page

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -14,19 +14,9 @@
 			<form action="/spy">
 				<input style = "font-size:30px"type="submit" value="Get overview of SPY">
 			</form>
-			
-			<h1> 2017 Watchlist </h1>
-			<form action="/symbols_2017">
-				<input style = "font-size:30px" type="submit" value="2017 Watchlist">
-			</form>
-			
-			<h1> Blank Watchlist </h1>
-			<form action="/symbols_blank">
-				<input style = "font-size:30px" type="submit" value="Blank Watchlist">
-			</form>
-			
-			<h1>To see the watchlist of overbought and oversold stocks click below.</h1>
-			<form action="/symbol_alerts">
+		
+			<h1>To see or create watchlists click below.</h1>
+			<form action="/watchlist_landing_page">
 				<input style = "font-size:30px"type="submit" value="Watchlist">
 			</form>
 			
