added covered call button to home_page

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -8,7 +8,12 @@
 				<input style = "font-size:30px"type="submit" value="See sentiment values for stock">
 				
 			</form>
-			
+		<h1>To see covered call premiums click the button below</h1>
+
+			<form action="/covered_call_input_form" >
+				<input style = "font-size:30px"type="submit" value="See covered call premiums">
+				
+			</form>	
 			<h1>To see an evaluation of the overall market click the button below.</h1>
 			
 			<form action="/spy">
